Bug 288366 - Menu key in keyboard doesn't trigger context menu in any views
Summary: Menu key in keyboard doesn't trigger context menu in any views
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-06 23:04 UTC by Lasse Liehu
Modified: 2011-12-07 22:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2011-12-06 23:04:29 UTC
Version:           1.99 (using Devel) 
OS:                Linux

When keyboard focus is on either icons, details or compact view and menu key is pressed, nothing happens. This worked with the old item views.

Reproducible: Always

Steps to Reproduce:
1. Open Dolphin.
2. Switch keyboard focus to the view.
3. Press Menu key

Actual Results:  
Nothing happens.

Expected Results:  
The context menu pops up.
Comment 1 Peter Penz 2011-12-07 22:10:16 UTC
Git commit 492650ad887de704ad22e4d992f6b175910d45c0 by Peter Penz.
Committed on 07/12/2011 at 23:04.
Pushed by ppenz into branch 'master'.

Enable "menu key" functionality

Bring back the functionality that a context-menu is opened if the "menu key" has been pressed. In opposite to Dolphin 1.7 the context-menu is shown above the selected item and not on the (probably unrelated) mouse position.

A new method KItemListView::itemContextRect() has been introduced: The method is now also used as reference for tooltips which fixes the issue that tooltips had a wrong horizontal alignment in the details-view.

BUG: 288366
FIXED-IN: 4.8.0

M  +29   -3    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +13   -0    dolphin/src/kitemviews/kitemlistview.cpp
M  +12   -0    dolphin/src/kitemviews/kitemlistview.h
M  +1    -1    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/492650ad887de704ad22e4d992f6b175910d45c0